# nXORE

./: CHANGELOG.md  CMakeLists.txt  INSTALLATIONS.md  LICENSE  README.md
src/: Encryptor.cpp  MenuForm.cpp  PassTextForm.cpp  PathIterate.cpp  SettingMenu.cpp  TextForm.cpp  main.cpp  main_func.cpp
src/include/: Encryptor.h  MenuForm.h  PassTextForm.h  PathIterate.h  SettingMenu.h  TextForm.h  headerpack.h  main_func.h  nXORE_Config.h
